# json2vault

./: .gitignore  LICENSE  README.md  README_zh.md  push_to_github.sh  pyproject.toml
examples/: bookmarks.json
json2vault/: __init__.py  __main__.py  cli.py  schema.py  vault.py
json2vault/adapters/: __init__.py  generic.py  pocket.py  registry.py  twitter.py  universal.py  weibo.py  xhs.py
