[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json2vault"
version = "0.1.0"
description = "Turn any JSON data into a structured Obsidian vault. Supports XHS, Twitter, Weibo, Pocket, and custom formats."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "jdh847" }]
keywords = [
    "obsidian", "vault", "json", "markdown", "knowledge-management",
    "note-taking", "data-conversion", "personal-wiki",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
json2vault = "json2vault.cli:main"

[project.urls]
Homepage = "https://github.com/jdh847/json2vault"
Issues = "https://github.com/jdh847/json2vault/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
